tests/snapshots/snapshots__budget_mdbook_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (504 tokens)

README.md
     1→# mdBook …
    14→## License …

crates/mdbook-core/README.md
     1→# mdbook-core …
    11→## License …

crates/mdbook-core/src/lib.rs
     7→pub const MDBOOK_VERSION: &str = env!("CARGO_PKG_VERSION");
    14→pub mod errors {

crates/mdbook-driver/README.md
     1→# mdbook-driver …
    11→## License …

crates/mdbook-html/README.md
     1→# mdbook-html …

crates/mdbook-html/src/lib.rs
     5→pub mod theme;

crates/mdbook-html/src/theme/mod.rs
    40→pub struct Theme {

crates/mdbook-markdown/src/lib.rs
    11→pub use pulldown_cmark;
    15→pub struct MarkdownOptions {
    16→    /// Enables smart punctuation.
      →…
    34→    fn default() -> MarkdownOptions {
    44→pub fn new_cmark_parser …

crates/mdbook-preprocessor/src/lib.rs
    30→pub trait Preprocessor {
    51→pub struct PreprocessorContext {

crates/mdbook-renderer/src/lib.rs
    28→pub trait Renderer {
    40→pub struct RenderContext {

crates/xtask/README.md
     1→# xtask …

guide/book.toml

guide/guide-helper/src/lib.rs
    10→pub fn handle_preprocessing() -> Result<()> {

guide/src/README.md
     1→# Introduction …

guide/src/cli/README.md
     1→# Command-line tool …

guide/src/format/README.md
     1→# Format …

guide/src/guide/README.md
     1→# User guide …

src/cmd/clean.rs
    38→pub fn human_readable_bytes …
    46→pub struct Clean {
    47→    num_files_removed: u64,
      →…

src/cmd/command_prelude.rs
    42→    fn arg_watcher …

src/cmd/mod.rs
     8→pub mod serve;
    11→pub mod watch;

src/cmd/serve.rs
     3→use super::watch;

src/cmd/watch/poller.rs
    18→pub fn rebuild_on_change …
