tests/snapshots/snapshots__budget_mdbook_cli_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 12 → level 0 (9 words)

README.md
arg-watcher.md
build.md
clean.md
completions.md
init.md
serve.md
test.md
watch.md
