tests/snapshots/snapshots__budget_mdbook_format_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 20 → level 0 (15 words)

README.md
configuration/README.md
configuration/environment-variables.md
configuration/general.md
configuration/preprocessors.md
configuration/renderers.md
example.rs
markdown.md
mathjax.md
mdbook.md
summary.md
theme/README.md
theme/editor.md
theme/index-hbs.md
theme/syntax-highlighting.md
