tests/snapshots/snapshots__budget_mdbook_guide_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1015 tokens)

404.md
     1→# Document not found (404)

README.md
     1→# Introduction
     4→    .mdbook-version {
     5→        position: absolute;
     6→        right: 20px;
      →        …
    46→## Contributing
    55→## License

SUMMARY.md
     1→# Summary
     5→# User guide
    11→# Reference guide

cli/README.md
     1→# Command-line tool
     3→The `mdbook` command-line tool is used to create and build books.
      →…

cli/build.md
     1→# The build command

cli/clean.md
     1→# The clean command

cli/completions.md
     1→# The completions command

cli/init.md
     1→# The init command

cli/serve.md
     1→# The serve command
    27→### Server options

cli/test.md
     1→# The test command

cli/watch.md
     1→# The watch command

continuous-integration.md
     1→# Running `mdbook` in continuous integration
    12→## Installing mdBook
    17→### Pre-compiled binaries
    39→### Building from source
    67→## Running tests
    83→## Deploying
   100→### 404 handling

for_developers/README.md
     1→# For developers
     3→While `mdbook` is mainly used as a command line tool, you can also import the
      →…
    17→## The build process
    30→## Using `mdbook` as a library

for_developers/backends.md
     1→# Alternative backends

for_developers/mdbook-wordcount/Cargo.toml
     1→[package]
     6→[dependencies]

for_developers/mdbook-wordcount/src/main.rs
    12→fn main() {
    40→fn count_words(ch: &Chapter) -> usize {
    44→#[derive(Debug, Default, Serialize, Deserialize)]
    45→#[serde(default, rename_all = "kebab-case")]
    46→pub struct WordcountConfig {
    47→    pub ignores: Vec<String>,
    48→    pub deny_odds: bool,
    49→}

for_developers/preprocessors.md
     1→# Preprocessors

format/README.md
     1→# Format
     3→In this section you will learn how to:
     4→
     5→- Structure your book correctly
      →…

format/configuration/README.md
     1→# Configuration
     3→This section details the configuration options available in the ***book.toml***:
      →…

format/configuration/environment-variables.md
     1→# Environment variables

format/configuration/general.md
     1→# General configuration

format/configuration/preprocessors.md
     1→# Configuring Preprocessors

format/configuration/renderers.md
     1→# Configuring Renderers
   286→#### `[output.html.search.chapter]`

format/example.rs
     1→fn main() {

format/markdown.md
     1→# Markdown
    43→#### A smaller heading 
    45→More text.
    46→

format/mathjax.md
     1→# MathJax support

format/mdbook.md
     1→# mdBook-specific features

format/summary.md
     1→# SUMMARY.md

format/theme/README.md
     1→# Theme
     3→The default renderer uses a [handlebars](https://handlebarsjs.com) template to
      →…

format/theme/editor.md
     1→# Editor

format/theme/index-hbs.md
     1→# index.hbs
    46→### toc
    80→### resource
    90→### fa

format/theme/syntax-highlighting.md
     1→# Syntax highlighting

guide/README.md
     1→# User guide
     3→This user guide provides an introduction to basic concepts of using mdBook.
     4→
     5→- [Installation](installation.md)
      →…

guide/creating.md
     1→# Creating a book
    36→### `book.toml`
    50→### `SUMMARY.md`
    73→### Source files

guide/installation.md
     1→# Installation
    41→### Installing the latest master version

guide/reading.md
     1→# Reading books
